--- a/v/vi/vir/viralnova.com.html
+++ b/v/vi/vir/viralnova.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the viralnova.com privacy policy that was archived on 2018-12-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181231011444id_/http%3A//viralnova.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the viralnova.com privacy policy that was archived on 2019-06-11.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190611174806id_/http%3A//www.viralnova.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -9,7 +9,7 @@
 	<link rel="icon" href="http://media.galaxant.com/000/460/928/favicon.ico" type="image/x-icon">	<link rel="alternate" type="application/rss+xml" title="RSS Feed" href="/feed/">
 
 
-	<script id="facebook-jssdk" src="//connect.facebook.net/en_US/all.js#xfbml=1"></script><script id="omniture-jssdk" src="http://assets.galaxant.com/omniture/compiled.js?_t=1539805721"></script><script async="" src="https://connect.facebook.net/en_US/fbevents.js"></script><script type="application/javascript">
+	<script id="facebook-jssdk" src="//connect.facebook.net/en_US/all.js#xfbml=1"></script><script id="omniture-jssdk" src="http://assets.galaxant.com/omniture/compiled.js?_t=1546629919"></script><script async="" src="https://connect.facebook.net/en_US/fbevents.js"></script><script type="application/javascript">
 		var aSlots = [];
 	</script>
 <meta property="fb:pages" content="157958141046266">
@@ -65,7 +65,7 @@ window.cookieconsent.initialise({
 					});
 	</script>
 		<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
-	<link type="text/css" rel="stylesheet" href="http://assets.galaxant.com/includes/styles/1/201/1?2.8.2-1475839040" media="all">
+	<link type="text/css" rel="stylesheet" href="http://assets.galaxant.com/includes/styles/1/201/1?2.8.3-1475839040" media="all">
 
 <meta property="og:site_name" content="ViralNova.com">
 <meta property="og:title" content="ViralNova - Your Stories On The Web">
@@ -107,14 +107,14 @@ window.cookieconsent.initialise({
 	<script async="" src="https://www.google-analytics.com/analytics.js"></script>
 	<!-- End Google Analytics -->
 
-					<link rel="apple-touch-icon" href="http://assets.galaxant.com/themes/nova2/images/apple-touch-icon.png?_t=1539805721">
-			<link rel="apple-touch-icon" sizes="57x57" href="http://assets.galaxant.com/themes/nova2/images/apple-touch-icon-57x57.png?_t=1539805721">
-			<link rel="apple-touch-icon" sizes="72x72" href="http://assets.galaxant.com/themes/nova2/images/apple-touch-icon-72x72.png?_t=1539805721">
-			<link rel="apple-touch-icon" sizes="76x76" href="http://assets.galaxant.com/themes/nova2/images/apple-touch-icon-76x76.png?_t=1539805721">
-			<link rel="apple-touch-icon" sizes="114x114" href="http://assets.galaxant.com/themes/nova2/images/apple-touch-icon-114x114.png?_t=1539805721">
-			<link rel="apple-touch-icon" sizes="120x120" href="http://assets.galaxant.com/themes/nova2/images/apple-touch-icon-120x120.png?_t=1539805721">
-			<link rel="apple-touch-icon" sizes="144x144" href="http://assets.galaxant.com/themes/nova2/images/apple-touch-icon-144x144.png?_t=1539805721">
-			<link rel="apple-touch-icon" sizes="152x152" href="http://assets.galaxant.com/themes/nova2/images/apple-touch-icon-152x152.png?_t=1539805721">
+					<link rel="apple-touch-icon" href="http://assets.galaxant.com/themes/nova2/images/apple-touch-icon.png?_t=1546629919">
+			<link rel="apple-touch-icon" sizes="57x57" href="http://assets.galaxant.com/themes/nova2/images/apple-touch-icon-57x57.png?_t=1546629919">
+			<link rel="apple-touch-icon" sizes="72x72" href="http://assets.galaxant.com/themes/nova2/images/apple-touch-icon-72x72.png?_t=1546629919">
+			<link rel="apple-touch-icon" sizes="76x76" href="http://assets.galaxant.com/themes/nova2/images/apple-touch-icon-76x76.png?_t=1546629919">
+			<link rel="apple-touch-icon" sizes="114x114" href="http://assets.galaxant.com/themes/nova2/images/apple-touch-icon-114x114.png?_t=1546629919">
+			<link rel="apple-touch-icon" sizes="120x120" href="http://assets.galaxant.com/themes/nova2/images/apple-touch-icon-120x120.png?_t=1546629919">
+			<link rel="apple-touch-icon" sizes="144x144" href="http://assets.galaxant.com/themes/nova2/images/apple-touch-icon-144x144.png?_t=1546629919">
+			<link rel="apple-touch-icon" sizes="152x152" href="http://assets.galaxant.com/themes/nova2/images/apple-touch-icon-152x152.png?_t=1546629919">
 			</head>
 
 	<body class="desktop">
@@ -147,7 +147,7 @@ window.cookieconsent.initialise({
 		}
 		js = d.createElement(s);
 		js.id = id;
-		js.src = "http://assets.galaxant.com/omniture/compiled.js?_t=1539805721";
+		js.src = "http://assets.galaxant.com/omniture/compiled.js?_t=1546629919";
 		fjs.parentNode.insertBefore(js, fjs);
 	}(document, 'script', 'omniture-jssdk'));
 </script>
@@ -469,11 +469,11 @@ window.cookieconsent.initialise({
 								<span class="yellow">&nbsp;In your inbox!</span>
 							</div>
 							<div class="col-xs-12 col-sm-4">
-								<form class="form" role="form" id="frm-5c296d84b419f" method="post">
+								<form class="form" role="form" id="frm-5cffe956d9c44" method="post">
 									<input style="width:80%;float:left" id="subscribe-email" class="form-control" type="email" name="email" placeholder="Enter your email">
 									<button class="btn btn-default" type="submit">OK</button>
 								</form>
-								<p id="message-5c296d84b419f" class="hidden"></p>
+								<p id="message-5cffe956d9c44" class="hidden"></p>
 							</div>
 						</div>
 					</div>
@@ -556,7 +556,7 @@ window.cookieconsent.initialise({
 									</div>
 									<div class="col-xs-12">
 										<div class="copyright pull-right">
-											<span title="0.044">@ 2018</span> <span title="PG D ASY INF REV 1 (orgn)  - PG D INF (SPOTIM)">ViralNova.com</span>										</div>
+											<span title="0.052">@ 2019</span> <span title="PG D ASY INF REV 1 (orgn)  - PG D INF (SPOTIM)">ViralNova.com</span>										</div>
 									</div>
 								</div>
 							</div>
@@ -564,14 +564,14 @@ window.cookieconsent.initialise({
 					</div>
 				</div>
 			</footer>
-			<a class="hidden-xs" style="position: fixed; bottom: 5px; right: 5px; opacity: 1; cursor: pointer;" href="#" title="Scroll to top"><i><img src="http://assets.galaxant.com/themes/nova2/images/arrow-up.png?_t=1539805721" alt="Scroll to top"></i></a>
+			<a class="hidden-xs" style="position: fixed; bottom: 5px; right: 5px; opacity: 1; cursor: pointer;" href="#" title="Scroll to top"><i><img src="http://assets.galaxant.com/themes/nova2/images/arrow-up.png?_t=1546629919" alt="Scroll to top"></i></a>
 		</div>
 
 		<!--GlobalFooterTags-->
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-<script src="http://assets.galaxant.com/js/libraries.min.js?_t=1539805721"></script>
-<script src="http://assets.galaxant.com/js/ads.js?_t=1539805721"></script>
-<script src="http://assets.galaxant.com/js/main.min.js?_t=1539805721"></script>
+<script src="http://assets.galaxant.com/js/libraries.min.js?_t=1546629919"></script>
+<script src="http://assets.galaxant.com/js/ads.js?_t=1546629919"></script>
+<script src="http://assets.galaxant.com/js/main.min.js?_t=1546629919"></script>
 <script>$(function() {try { Nova.System.addGAAccount('NovaNetwork'); ga_accounts.push('NovaNetwork'); Nova.System.addGAAccount('NovaRT'); ga_accounts.push('NovaRT'); Nova.System.addGAAccount('PG'); ga_accounts.push('PG'); Nova.System.addGAAccount('Test'); ga_accounts.push('Test'); } catch(e) { showConsole(e); }}); 
 </script>
 <script>
@@ -622,14 +622,14 @@ _taboola.push({flush: true});
 
 					<script>
 				$(function() {
-					$('#frm-5c296d84b419f').submit(function() {
-						var email = $('#frm-5c296d84b419f input[name=email]').val();
+					$('#frm-5cffe956d9c44').submit(function() {
+						var email = $('#frm-5cffe956d9c44 input[name=email]').val();
 
 						Nova.Social.subscribeEmail(email, 'desktop', function(response) {
 
 							if (response.success) {
-								$('#message-5c296d84b419f').html('Success. Thanks for signing up!').show();
-								$('#frm-5c296d84b419f').hide();
+								$('#message-5cffe956d9c44').html('Success. Thanks for signing up!').show();
+								$('#frm-5cffe956d9c44').hide();
 
 								
 								ga('send', 'event', 'Newsletter', 'Signup', 'desktop');
@@ -637,7 +637,7 @@ _taboola.push({flush: true});
 								if (!response.message) {
 									response.message = 'There are an error, please try again.';
 								}
-								$('#message-5c296d84b419f').html(response.message).show();
+								$('#message-5cffe956d9c44').html(response.message).show();
 							}
 						});
 						return false;
